@@ -171,8 +171,8 @@ Archery.SubSkill.ArrowRetrieval.Name=Arrow Retrieval
 Archery.SubSkill.ArrowRetrieval.Description=Chance to retrieve arrows from corpses
 Archery.SubSkill.ArrowRetrieval.Stat=Arrow Recovery Chance
 Archery.SubSkill.ArcheryLimitBreak.Name=Archery Limit Break
-Archery.SubSkill.ArcheryLimitBreak.Description=Breaking your limits.
-Archery.SubSkill.ArcheryLimitBreak.Stat=Limit Break Bonus DMG
+Archery.SubSkill.ArcheryLimitBreak.Description=Breaking your limits. (PVP Only)
+Archery.SubSkill.ArcheryLimitBreak.Stat=Limit Break PVP DMG
 Archery.Listener=Archery:
 Archery.SkillName=ARCHERY
 #AXES
@@ -198,8 +198,8 @@ Axes.SubSkill.CriticalStrikes.Stat=Critical Strike Chance
 Axes.SubSkill.AxeMastery.Name=Axe Mastery
 Axes.SubSkill.AxeMastery.Description=Adds bonus DMG
 Axes.SubSkill.AxesLimitBreak.Name=Axes Limit Break
-Axes.SubSkill.AxesLimitBreak.Description=Breaking your limits.
-Axes.SubSkill.AxesLimitBreak.Stat=Limit Break Bonus DMG
+Axes.SubSkill.AxesLimitBreak.Description=Breaking your limits. (PVP Only)
+Axes.SubSkill.AxesLimitBreak.Stat=Limit Break PVP DMG
 Axes.SubSkill.ArmorImpact.Name=Armor Impact
 Axes.SubSkill.ArmorImpact.Description=Strike with enough force to shatter armor
 Axes.SubSkill.GreaterImpact.Name=Greater Impact
@@ -423,8 +423,8 @@ Swords.SubSkill.Stab.Name=Stab
 Swords.SubSkill.Stab.Description=Adds bonus damage to your attacks.
 Swords.SubSkill.Stab.Stat=Stab Damage
 Swords.SubSkill.SwordsLimitBreak.Name=Swords Limit Break
-Swords.SubSkill.SwordsLimitBreak.Description=Breaking your limits.
-Swords.SubSkill.SwordsLimitBreak.Stat=Limit Break Bonus DMG
+Swords.SubSkill.SwordsLimitBreak.Description=Breaking your limits. (PVP Only)
+Swords.SubSkill.SwordsLimitBreak.Stat=Limit Break PVP DMG
 Swords.SubSkill.Rupture.Stat=Rupture Chance
 Swords.SubSkill.Rupture.Stat.Extra=Rupture: [[GREEN]]{0} ticks [{1} DMG vs Player] [{2} DMG vs Mobs]
 Swords.Effect.4=Serrated Strikes Rupture+
@@ -502,8 +502,8 @@ Unarmed.SubSkill.Disarm.Name=Disarm
 Unarmed.SubSkill.Disarm.Description=Drops the foes item held in hand
 Unarmed.SubSkill.Disarm.Stat=Disarm Chance
 Unarmed.SubSkill.UnarmedLimitBreak.Name=Unarmed Limit Break
-Unarmed.SubSkill.UnarmedLimitBreak.Description=Breaking your limits.
-Unarmed.SubSkill.UnarmedLimitBreak.Stat=Limit Break Bonus DMG
+Unarmed.SubSkill.UnarmedLimitBreak.Description=Breaking your limits. (PVP Only)
+Unarmed.SubSkill.UnarmedLimitBreak.Stat=Limit Break PVP DMG
 Unarmed.SubSkill.IronArmStyle.Name=Iron Arm Style
 Unarmed.SubSkill.IronArmStyle.Description=Hardens your arm over time
 Unarmed.SubSkill.ArrowDeflect.Name=Arrow Deflect
